fix: lista de filmes

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "identity": {
-        "username": "filmes_seriesbr",
-        "password": "oauth:7jqp8tfjdi9pbkzfq0xcc0w9mufxdn"
+        "username": "filmes_seriesbr1",
+        "password": "oauth:6iy0ucuf1e9i59k55w6rwn5koyhdse"
     },
-    "channels": ["filmes_seriesbr"]
+    "channels": ["filmes_seriesbr1"]
 }
