fix: twitch token

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "identity": {
-        "username": "filmes_seriesbr1",
-        "password": "oauth:6iy0ucuf1e9i59k55w6rwn5koyhdse"
+        "username": "filmes_seriesbr",
+        "password": "oauth:nvg5aufpqd8kzl40zp2dt3pr4w7jhu"
     },
-    "channels": ["filmes_seriesbr1"]
+    "channels": ["filmes_seriesbr"]
 }
